--- a/package.json
+++ b/package.json
@@ -8,12 +8,8 @@
     "node": ">=6.4.0"
   },
   "scripts": {
-    "start": "webpack-dev-server -d --config webpack.dev.config.js --progress --colors",
     "react-dev": "webpack -d --watch",
-    "prod": "NODE_ENV=production node server.js",
-    "build": "webpack --config webpack.prod.config.js -p --progress --colors",
-    "postinstall": "webpack --config webpack.prod.config.js -p --progress --colors",
-    //"start": "node server/index.js",
+    "start": "node server/index.js",
     "seed-data": "node server/db/worker.js",
     "rmb": "rm /leplonger/client/dist/bundle.js",
     "test": "mocha test"
