removed webpack script

--- a/package.json
+++ b/package.json
@@ -8,12 +8,11 @@
     "node": ">=6.4.0"
   },
   "scripts": {
-    "heroku-postbuild": "webpack -p --config ./webpack.config.js --progress",
     "react-dev": "webpack -d --watch",
     "start": "node server/index.js",
     "seed-data": "node server/db/worker.js",
     "rmb": "rm /leplonger/client/dist/bundle.js",
-    "test": "mocha test"
+    "test": "mocha test",
   },
   "devDependencies": {
     "babel-core": "^6.23.1",
