--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "react-dev": "webpack -d --watch",
     "start": "node server/index.js",
-    "seed-data": "node server/db/worker.js",
+    // "seed-data": "node server/db/worker.js",
     "rmb": "rm /leplonger/client/dist/bundle.js",
     "test": "mocha test",
   },
