--- a/package.json
+++ b/package.json
@@ -7,12 +7,6 @@
   "engines": {
     "node": ">=6.4.0"
   },
-  "scripts": {
-    "react-dev": "webpack -d --watch",
-    "start": "node server/index.js",
-    "rmb": "rm /leplonger/client/dist/bundle.js",
-    "test": "mocha test",
-  },
   "devDependencies": {
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
@@ -21,6 +15,12 @@
     "jsx-chai": "^4.0.0",
     "npm-install-webpack-plugin": "^4.0.4",
     "webpack": "^2.4.1"
+  },
+  "scripts": {
+    "react-dev": "webpack -d --watch",
+    "start": "node server/index.js",
+    "rmb": "rm /leplonger/client/dist/bundle.js",
+    "test": "mocha test"
   },
   "dependencies": {
     "axios": "^0.16.1",
