--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,8 @@ leplonger/client/dist/bundle.js
 # see https://npmjs.org/doc/faq.html#Should-I-check-my-node_modules-folder-into-git
 node_modules/
 bower_components/
-
+bundle.js
+client/dist/bundle.js
 
 # API Keys
 keys.js
